--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -7,4 +5,9 @@
 /public/bundles/
 /var/
 /vendor/
-###< symfony/framework-bundle ###
+/phpunit.xml
+.phpunit.result.cache
+.phpunit
+/.php_cs.cache
+/.php_cs.dist
+.idea
