--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,24 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.13",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.9",
+        "friendsofsymfony/rest-bundle": "^3.0",
+        "jms/serializer-bundle": "^3.9",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/monolog-bundle": "^3.7",
+        "symfony/options-resolver": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/serializer": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
-    },
-    "require-dev": {
     },
     "config": {
         "preferred-install": {
@@ -57,5 +68,14 @@
             "allow-contrib": false,
             "require": "4.4.*"
         }
+    },
+    "require-dev": {
+        "ext-json": "*",
+        "dama/doctrine-test-bundle": "^6.5",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "^4.4",
+        "symfony/css-selector": "^4.4",
+        "symfony/maker-bundle": "^1.31",
+        "symfony/phpunit-bridge": "^5.2"
     }
 }
